I think border works...