@@ -10,23 +10,24 @@ abstract class Embellishment extends CompositeGlyph {
 
     @Override
     public void insert(Glyph glyph, int position) {
-        if(this.children.size() == 0) {
-            this.children.add(glyph);
-            glyph.setParent(this);
-            Glyph root = goToRoot();
-            root.compose();
-        }
-        else {
-            this.children.get(0).insert(glyph, 0);
-        }
+        this.children.getFirst().insert(glyph, position);
+//        if(this.children.size() == 0) {
+//            this.children.add(glyph);
+//            glyph.setParent(this);
+//            Glyph root = goToRoot();
+//            root.compose();
+//        }
+//        else {
+//            this.children.get(0).insert(glyph, 0);
+//        }
     }
 
     @Override
     public void remove(Glyph glyph) {
         if(this.children.size() == 0) {
-            this.children.remove(glyph);
+            throw new UnsupportedOperationException();
         } else {
-            this.children.get(0).remove(glyph);
+            this.children.getFirst().remove(glyph);
         }
     }
 
@@ -34,9 +35,9 @@ abstract class Embellishment extends CompositeGlyph {
     public Glyph child(int position) {
         int childrenSize = this.children.size();
         if(position >= childrenSize && childrenSize == 1) {
-            return this.children.get(0).child(position);
+            return this.children.getFirst().child(position);
         } else if(childrenSize == 1) {
-            return this.children.get(0);
+            return this.children.getFirst();
         } else {
             return null;
         }
